[FLINK-13457][build][travis] Remove JDK 9 support